[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/deck_builder/deck_builder.gd" type="Script" id=1]
[ext_resource path="res://themes/ttheme.tres" type="Theme" id=2]

[node name="DeckBuilder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -400.0
margin_bottom = -200.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Window" type="WindowDialog" parent="."]
margin_right = 48.0
margin_bottom = 40.0
rect_min_size = Vector2( 1200, 700 )

[node name="View" type="HSplitContainer" parent="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
custom_constants/separation = 0
split_offset = 675

[node name="AllView" type="Panel" parent="Window/View"]
margin_right = 675.0
margin_bottom = 700.0

[node name="CardTotal" type="Label" parent="Window/View/AllView"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 6.0
margin_right = 64.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 30 )
text = "All Cards:"
align = 1
valign = 1

[node name="Top" type="HBoxContainer" parent="Window/View/AllView"]
anchor_left = 0.428
anchor_top = -0.005
anchor_right = 0.428
anchor_bottom = -0.005
margin_left = 249.8
margin_top = 9.5
margin_right = 508.8
margin_bottom = 42.5
custom_constants/separation = 42
alignment = 2

[node name="TypeCombo" type="OptionButton" parent="Window/View/AllView/Top"]
margin_left = 7.0
margin_right = 108.0
margin_bottom = 33.0
rect_min_size = Vector2( 101, 0 )
text = "All types"
items = [ "All types", null, false, 0, null, "Melee", null, false, 1, null, "Ranged", null, false, 2, null, "Magic", null, false, 3, null ]
selected = 0

[node name="LevelCombo" type="OptionButton" parent="Window/View/AllView/Top"]
margin_left = 150.0
margin_right = 259.0
margin_bottom = 33.0
rect_min_size = Vector2( 109, 0 )
text = "All Levels"
items = [ "All Levels", null, false, 0, null, "Level 1", null, false, 1, null, "Level 2", null, false, 2, null, "Level 3", null, false, 3, null, "Level 4", null, false, 4, null ]
selected = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Window/View/AllView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 45.0
margin_right = -22.0
margin_bottom = -55.0
scroll_horizontal_enabled = false

[node name="CardGrid" type="GridContainer" parent="Window/View/AllView/ScrollContainer"]
margin_right = 625.0
margin_bottom = 600.0
rect_min_size = Vector2( 625, 600 )
rect_pivot_offset = Vector2( 332, 365 )
size_flags_horizontal = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 5

[node name="DeckView" type="Panel" parent="Window/View"]
margin_left = 683.0
margin_right = 1200.0
margin_bottom = 700.0

[node name="LoadBox" type="HBoxContainer" parent="Window/View/DeckView"]
anchor_right = 1.0
margin_top = 6.0
margin_bottom = 37.0
custom_constants/separation = 15
alignment = 1

[node name="CardTotal" type="Label" parent="Window/View/DeckView/LoadBox"]
margin_left = 178.0
margin_right = 338.0
margin_bottom = 31.0
rect_min_size = Vector2( 120, 31 )
text = "Deck: 0 / 12 (Min:9)"
align = 1
valign = 1

[node name="Savebox" type="HBoxContainer" parent="Window/View/DeckView"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -313.0
margin_top = -40.0
margin_right = -9.0
margin_bottom = -9.0
custom_constants/separation = 20
alignment = 2

[node name="Reset" type="Button" parent="Window/View/DeckView/Savebox"]
margin_left = 188.0
margin_right = 240.0
margin_bottom = 31.0
text = "Reset"
icon_align = 1

[node name="Save" type="Button" parent="Window/View/DeckView/Savebox"]
margin_left = 260.0
margin_right = 304.0
margin_bottom = 31.0
text = "Save"
icon_align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Window/View/DeckView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 45.0
margin_right = -17.0
margin_bottom = -55.0
scroll_horizontal_enabled = false

[node name="CardGrid" type="GridContainer" parent="Window/View/DeckView/ScrollContainer"]
margin_right = 480.0
margin_bottom = 600.0
rect_min_size = Vector2( 480, 600 )
rect_pivot_offset = Vector2( 332, 365 )
size_flags_horizontal = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3

[connection signal="item_selected" from="Window/View/AllView/Top/TypeCombo" to="." method="_on_TypeCombo_item_selected"]
[connection signal="item_selected" from="Window/View/AllView/Top/LevelCombo" to="." method="_on_LevelCombo_item_selected"]
[connection signal="gui_input" from="Window/View/AllView/ScrollContainer/CardGrid" to="." method="_onAction_all_gui_input"]
